force-app/main/default/objects/Test_Definition__mdt/Test_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Identifies the type of Test taken and the Test provider. For example, the SAT administered by the College Board or X.</description>
    <label>Test Definition</label>
    <pluralLabel>Test Definitions</pluralLabel>
</CustomObject>