force-app/main/default/objects/Test_Definition__mdt/fields/Academic_Level__c.field-meta.xml
<CustomField>
    <fullName>Academic_Level__c</fullName>
    <description>The grade-level, developmental level, or age-level that the Test Definition was designed for.</description>
    <inlineHelpText>The Academic Level of the Test. For example, the Test was offered in High School.</inlineHelpText>
    <label>Academic Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-K/Preschool</fullName>
                <default>true</default>
                <label>Pre-K/Preschool</label>
            </value>
            <value>
                <fullName>Elementary</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Doctoral</fullName>
            </value>
            <value>
                <fullName>Post-Baccalaureate Certificate</fullName>
            </value>
            <value>
                <fullName>Adult Education</fullName>
            </value>
            <value>
                <fullName>Professional Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>