force-app/main/default/objects/Test_Definition__mdt/fields/Credentialing_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Identifier__c</fullName>
    <description>An International Resource Identifier that uniquely identifies this credential.</description>
    <inlineHelpText>An International Resource Identifier that uniquely identifies this credential.</inlineHelpText>
    <label>Credentialing Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>