force-app/main/default/objects/Test_Definition__mdt/fields/Credits_Available__c.field-meta.xml
<CustomField>
    <fullName>Credits_Available__c</fullName>
    <description>The number of credits that could be earned taking the Test.</description>
    <inlineHelpText>The number of credits that could be earned taking the Test.</inlineHelpText>
    <label>Credits Available</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>