force-app/main/default/objects/Test_Definition__mdt/fields/Issuer_Credentialing_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Issuer_Credentialing_Identifier__c</fullName>
    <description>An International Resource Identifier that uniquely identifies the issuing organization of this type of Test for credentialing purposes.</description>
    <inlineHelpText>An International Resource Identifier that uniquely identifies the issuing organization of this type of Test for credentialing purposes.</inlineHelpText>
    <label>Issuer Credentialing Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>