force-app/main/default/objects/Test_Definition__mdt/fields/Issuer_Email__c.field-meta.xml
<CustomField>
    <fullName>Issuer_Email__c</fullName>
    <description>The email address of the organization issuing the test.</description>
    <inlineHelpText>The email address of the organization issuing the test.</inlineHelpText>
    <label>Issuer Email</label>
    <type>Email</type>
</CustomField>