force-app/main/default/objects/Test_Definition__mdt/fields/Issuer_Name__c.field-meta.xml
<CustomField>
    <fullName>Issuer_Name__c</fullName>
    <description>The name of the organization who issued the Test.</description>
    <inlineHelpText>The name of the organization who issued the Test.</inlineHelpText>
    <label>Issuer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>