force-app/main/default/objects/Test_Definition__mdt/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <description>The name of the Test. For example, SAT or TOEFL.</description>
    <inlineHelpText>The name of the Test. For example, SAT or TOEFL.</inlineHelpText>
    <label>Test Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAT</fullName>
                <default>true</default>
                <label>SAT</label>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>GRE</fullName>
            </value>
            <value>
                <fullName>GMAT</fullName>
            </value>
            <value>
                <fullName>TOEFL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>