force-app/main/default/objects/Test_Definition__mdt/listViews/All_Test_Definitions.listView-meta.xml
<ListView>
    <fullName>All_Test_Definitions</fullName>
    <columns>MasterLabel</columns>
    <columns>Test_Type__c</columns>
    <columns>Academic_Level__c</columns>
    <columns>Issuer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Test Definitions</label>
    <language>en_US</language>
</ListView>